--- a/src/static/website/css/style.css
+++ b/src/static/website/css/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Playfair+Display:400,400i,700");
+@import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@100..900&display=swap');
 body {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Vazirmatn", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   background-color: #ffffff;
   color: #444342;
@@ -14,29 +15,29 @@ a:hover {
   color: #a28d6c; }
 
 h1 {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Vazirmatn","Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 3rem;
   font-weight: 400; }
 
 h2 {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Vazirmatn","Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 2.8rem;
   font-weight: 300; }
 
 h3 {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Vazirmatn","Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 2rem;
   font-weight: 300; }
 
 h4 {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Vazirmatn","Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1rem;
   font-weight: 400;
   text-transform: uppercase;
   letter-spacing: 0.05rem; }
 
 h5 {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Vazirmatn","Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1rem;
   font-weight: 400;
   text-transform: uppercase;
