--- a/src/templates/website/sidebar-mainContent.html
+++ b/src/templates/website/sidebar-mainContent.html
@@ -1,21 +1,14 @@
 {% extends 'website/base.html' %}
 {% load static %}
 
-{% block css %}
-
-{% endblock %}
-
 {% block content %}
     <div style="min-height: 500px">
         <div class="container-fluid text-center h-100">
             <div class="row align-items-start">
                 <div class="col-1 border-left d-flex flex-column">
-                    <button type="button" class="btn mt-3 px-2 btn-outline-success">
-                        <a href="{% url 'owner-register' %}">ثبت نام فروشنده</a>
-                    </button>
-                    <button type="button" class="btn mt-3 px-2 btn-outline-success">
-                        <a href="{% url 'customer-register' %}">ثبت نام مشتری</a>
-                    </button>
+                    {% block side-bar %}
+
+                    {% endblock %}
                 </div>
                 <div class="col-5 ">
                     {% block main-content %}
@@ -26,8 +19,4 @@
             </div>
         </div>
     </div>
-{% endblock %}
-
-{% block js %}
-
 {% endblock %}
