fix: Change template 'ped bootstrap'

--- a/src/templates/website/template_page.html
+++ b/src/templates/website/template_page.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     
-    <h1 class="text-center">HOME</h1>
+    <h1 class="text-center">template</h1>
     
 {% endblock %}
 
