--- a/src/templates/accounts/register.html
+++ b/src/templates/accounts/register.html
@@ -4,21 +4,21 @@
 
 
 {% block side-bar %}
-    <a href="{% url 'owner-register' %}" class="list-group-item list-group-item-action {{ vendor_register }}">ثبت نام
-        فروشنده
+    <a href="{% url 'vendors:register-owner' %}" class="list-group-item list-group-item-action {{ vendor_register }}">
+        ثبت نام فروشنده
     </a>
-    <a href="{% url 'customer-register' %} " class="list-group-item list-group-item-action {{ customer_register }}">
-        ثبت
-        نام
-        مشتری</a>
+    <a href="{% url 'customers:register' %} " class="list-group-item list-group-item-action {{ customer_register }}">
+        ثبت نام مشتری
+    </a>
 {% endblock %}
 
 
 {% block main-content %}
-    <form action="" method="post">
-        {{ form.as_p }}
-        {% csrf_token %}
-        <input type="submit" value="ثبت نام">
-    </form>
+{#    <form action="" method="post">#}
+{#        {{ form.as_p }}#}
+{#        {% csrf_token %}#}
+{#        <input type="submit" value="ثبت نام">#}
+{#    </form>#}
+    {% include 'accounts/../website/sections/form.html' %}
 {% endblock %}
           
