Misc: Do some code cleaning

--- a/src/templates/website/template_sidebar_page.html
+++ b/src/templates/website/template_sidebar_page.html
@@ -5,7 +5,7 @@
 
 <div class="container-fluid text-center p-5">
     <div class="row h-100">
-        <div class="col-2  border rounded-3 " style="height: 500px;">
+        <div class="col-2  border rounded-3 " style="min-height: 500px;">
             <div class="list-group list-group-flush my-4">
                 {% block side-bar %}
                 
