--- a/src/templates/accounts/register.html
+++ b/src/templates/accounts/register.html
@@ -4,7 +4,7 @@
 
 
 {% block side-bar %}
-    <a href="{% url 'vendors:register-owner' %}" class="list-group-item list-group-item-action {{ vendor_register }}">
+    <a href="{% url 'vendors:register-owner' %}" class="list-group-item list-group-item-action {{ staff_register }}">
         ثبت نام فروشنده
     </a>
     <a href="{% url 'customers:register' %} " class="list-group-item list-group-item-action {{ customer_register }}">
@@ -14,11 +14,6 @@
 
 
 {% block main-content %}
-{#    <form action="" method="post">#}
-{#        {{ form.as_p }}#}
-{#        {% csrf_token %}#}
-{#        <input type="submit" value="ثبت نام">#}
-{#    </form>#}
     {% include 'accounts/../website/sections/form.html' %}
 {% endblock %}
           
