--- a/src/templates/website/index.html
+++ b/src/templates/website/index.html
@@ -2,12 +2,10 @@
 {% load static %}
 
 {% block css %}
-	
+
 {% endblock %}
 
 {% block content %}
-    
-    <h1 class="text-center">HOME</h1>
-    
+    {% include 'products/product_list.html' %}
 {% endblock %}
 
