feat: Add OTP login

--- a/src/templates/website/sections/header.html
+++ b/src/templates/website/sections/header.html
@@ -94,7 +94,7 @@
                             </ul>
                         </div>
                     {% else %}
-                        <a class="btn btn-outline-secondary" href="{% url 'accounts:login' %}">
+                        <a class="btn btn-outline-secondary" href="{% url 'accounts:login-email' %}">
                             ورود | ثبت نام
                         </a>
                     {% endif %}
