--- a/src/templates/products/comment_list.html
+++ b/src/templates/products/comment_list.html
@@ -7,7 +7,12 @@
                 <h5>{{ comment.title }}</h5>
             </div>
             <p>{{ comment.text }}</p>
-            <p class="text-muted m-0 fs-6">{{ comment.created_at|date }}</p>
+            <div class="d-flex justify-content-between">
+                <p class="text-muted m-0 fs-6">{{ comment.created_at|date }}</p>
+                {% if my_comment_list_section and is_customer %}
+                    <p class="text-muted m-0 fs-6">وضعیت: {{ comment.status }}</p>
+                {% endif %}
+            </div>
         </div>
     {% endfor %}
 </div>
