--- a/src/templates/website/index.html
+++ b/src/templates/website/index.html
@@ -6,6 +6,6 @@
 {% endblock %}
 
 {% block content %}
-    {% include 'products/product_list.html' %}
+    {% include 'products/store_product_list.html' %}
 {% endblock %}
 
