--- a/src/templates/products/store_product_list.html
+++ b/src/templates/products/store_product_list.html
@@ -5,7 +5,7 @@
     {% if dashboard_store_product_section %}
         {% if is_owner or is_manager %}
             <div class="d-grid gap-2">
-                <a href="{% url 'vendors:store-product-create' %}" class="btn btn-success" type="button">افزودن محصول</a>
+                <a href="{% url 'vendors:store-product-create' %}" class="btn btn-success" type="button">افزودن محصول به فروشگاه</a>
             </div>
         {% endif %}
     {% endif %}
