--- a/src/templates/website/index.html
+++ b/src/templates/website/index.html
@@ -6,6 +6,8 @@
 {% endblock %}
 
 {% block content %}
-    {% include 'products/store_product_list.html' %}
+    <div class="container border rounded-3 mx-auto mt-5 pt-3">
+        {% include 'products/store_product_list.html' %}
+    </div>
 {% endblock %}
 
