--- a/src/templates/website/sections/form.html
+++ b/src/templates/website/sections/form.html
@@ -1,5 +1,5 @@
 <div class="p-5 mt-5 align-middle">
-    <form action="" method="post" enctype="multipart/form-data">
+    <form action="{{ form_link }}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {% for field in form %}
             {% if forloop.counter0|divisibleby:2 %}
@@ -15,7 +15,13 @@
         {% endif %}
         {% endfor %}
         <div class="d-grid gap-2">
-            <button type="submit" class="btn btn-success fw-bold fs-5">ثبت</button>
+            <button type="submit" class="btn btn-success fw-bold fs-5">
+                {% if submit_button_content %}
+                    {{ submit_button_content }}
+                {% else %}
+                    ثبت
+                {% endif %}
+            </button>
         </div>
     </form>
 </div>
