fix: Fix some Views, Models, and templates

--- a/src/templates/website/index.html
+++ b/src/templates/website/index.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container border rounded-3 mx-auto mt-5 pt-3">
+    <div class="container border rounded-3 mx-auto mt-5 pt-3 bg-white">
         {% include 'products/store_product_list.html' %}
     </div>
 {% endblock %}
