--- a/src/templates/website/template_sidebar_page.html
+++ b/src/templates/website/template_sidebar_page.html
@@ -5,8 +5,8 @@
 
 <div class="container-fluid text-center p-5">
     <div class="row h-100">
-        <div class="col-2  border rounded-3 " style="min-height: 500px;">
-            <div class="list-group list-group-flush my-4">
+        <div class="col-2  border rounded-3  bg-white" style="min-height: 500px;">
+            <div class="list-group list-group-flush my-4 ">
                 {% block side-bar %}
                 
                 {% endblock %}
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="col-10 " style="min-height: 500px;">
-            <div class="row mx-4 p-3 border rounded-3 h-100">
+            <div class="row mx-4 p-3 border rounded-3 h-100  bg-white">
                 {% block main-content %}
                    
                 {% endblock %}
