--- a/src/templates/website/base.html
+++ b/src/templates/website/base.html
@@ -58,6 +58,7 @@
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous">
     </script>
+    <script src="{% static 'website/js/script.js' %}"></script>
 
     <!-- Custom js -->
     {% block js %}
